max width 980 change to 1000
color change to #12dd34

--- a/src/java/Java_Start_Guide.html
+++ b/src/java/Java_Start_Guide.html
@@ -5,10 +5,10 @@
 		<title>Java Start Guide</title>
 		<style>
 			body {
-			  max-width: 980px;
+			  max-width: 1000px;
 			  border: 1px solid #ddd;
 			  outline: 1300px solid #fff;
-			  margin: 16px auto;
+			  margin: 17px auto;
 			}
 
 			body .markdown-body {
@@ -19,7 +19,7 @@
 			  font-family: sans-serif;
 			  -ms-text-size-adjust: 100%;
 			  -webkit-text-size-adjust: 100%;
-			  color: #333333;
+			  color: #12dd34;
 			  overflow: hidden;
 			  font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
 			  font-size: 16px;
