line height normal change to large
color #133 change to #144

--- a/src/java/Java_Start_Guide.html
+++ b/src/java/Java_Start_Guide.html
@@ -100,7 +100,7 @@
 			}
 
 			.markdown-body input {
-			  line-height: normal;
+			  line-height: large;
 			}
 
 			.markdown-body input[type="checkbox"] {
@@ -321,7 +321,7 @@
 			  display: inline-block;
 			  text-decoration: none;
 			  opacity: 0;
-			  color: #333;
+			  color: #444;
 			}
 
 			.markdown-body .headerlink:focus {
