--- a/src/HelloWorld.html
+++ b/src/HelloWorld.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World</title>
+<title>Hello everyone</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>This is main Heading</h1>
 <p>This is a paragraph.</p>
 
 </body>
